# pirn

./: .gitignore  .pre-commit-config.yaml  AGENTIC_USE.md  AGENTIC_USE_SPEC.md  CHANGELOG.md  CLAUDE.md  Dockerfile.ci  Dockerfile.ci-heavy  LICENSE  README.md  SECURITY.md  ci_history.db  coverage.json  docker-compose.test.yml  mkdocs.yml  pyproject.toml  pyright.base.json  pyrightconfig.json  pytest.ini  ruff.toml
.claude/skills/: create-agentic-use-guide.md
.github/: dependabot.yml
.github/scripts/: calculate_version.py
.github/workflows/: benchmarks.yml  build-ci-image.yml  ci.yml  docs.yml  extras-isolation.yml  heavy-tests.yml  mutation.yml  publish.yml  real-backends.yml  workspace.yml
.prompticorn/: .prompticorn.yaml
.promptosaurus/: .promptosaurus.yaml
.promptosaurus/sessions/: session_20260429_k8m2x7.md  session_20260430_d9f3p1.md  session_20260502_r7t4w9.md  session_20260506_ci7x3q.md  session_20260507_d2r8v5.md
docs/: architecture.md  choosing-backends.md  deployment-sizing.md  exception-handling.md  index.md  observability.md  perf-baseline.md  requirements.txt  schema-migrations.md  subscribable-stores.md  webhook-trigger-auth.md
docs/api/: backends.md  core.md  dispatchers.md  emitters.md  index.md  nodes.md  streaming.md  tapestry.md  triggers.md  visualization.md  yaml-loader.md
docs/architecture/: ci-pipelines.md  execution-model.md  extension-points.md  index.md  overview.md
docs/connectors/: index.md
docs/contributing/: assembler-disassembler-pattern.md  domain-knots.md  index.md  knot-design-rules.md  knot-remediation-process.md
docs/cookbook/: branching.md  fan-out.md  index.md  streaming.md  testing-patterns.md
docs/domains/: agents.md  data.md  health.md  index.md  ml.md  oilgas.md  signal.md
docs/getting-started/: concepts.md  first-pipeline.md  index.md  quickstart.md
docs/guides/: agentic-loops.md  backends.md  deployment.md  error-handling.md  index.md  knot-registration.md  migrating-to-split-packages.md  observability.md  sub-tapestry.md  testing.md  versioning.md  visualization.md  yaml-pipelines.md
docs/theme/: main.html  mkdocs_theme.yml
examples/: README.md  explore_pipelines.py  pirn.db  pirn_explorer.html
examples/content_moderation/: knots.py  run.py  tapestry.yaml
examples/data_pipeline/: complex_analytics.py  simple_etl.py  transport_layers.py
examples/document_analysis/: document_analysis.py  pipeline.py
examples/domain_formats/: genomics_batch_qc.py  geospatial_layer_analysis.py  hl7v2_message_router.py  medical_triage_agent.py  ml_evaluation_loop.py  seismic_survey_pipeline.py  weather_forecast_pipeline.py
examples/financial/: fraud_detection.py  loan_underwriting.py
examples/lab_batch/: lab_batch.py
examples/llm_agent/: agent_loop.py  agent_loop_v2.py  chatbot_pipeline.py
examples/pipeline_composition/: pirn.db  sub_tapestry.py
examples/software_execution/: ci_pipeline.py  request_handler.py
pirn/: __init__.py  check.py  replay.py  tapestry.py
pirn/backends/: __init__.py  _signer.py  _signing.py  azure.py  disk.py  duckdb.py  gcs.py  in_memory.py  postgres.py  s3.py  signing_key.py  sqlite.py  subscribe.py  valkey.py
pirn/check/: validator.py
pirn/core/: __init__.py  assembler.py  config.py  context.py  disassembler.py  err.py  error_policy.py  hashing.py  knot.py  knot_config.py  knot_factory.py  lineage.py  ok.py  optional.py  parameter.py  pirn_opaque_value.py  result.py  run_context.py  run_request.py  run_result.py  skipped.py
pirn/domains/: __init__.py  _extras.py  extras_loader.py
pirn/emitters/: __init__.py  base.py  emitter_error_policy.py  kafka.py  log.py  otel.py  valkey.py  webhook.py
pirn/engine/: __init__.py  _emitter_subscriber.py  celery_dispatcher.py  dask_dispatcher.py  dispatcher.py  engine.py  ray_dispatcher.py  shed.py
pirn/exceptions/: duplicate_knot_error.py  invalid_branch_error.py  pirn_error.py  tapestry_error.py  unbound_parameter_error.py
pirn/managers/: exception_manager.py  exception_record.py  exceptions.py  knot_state.py  rebindable_exception.py  redact.py  status.py  status_event.py
pirn/nodes/: AGENTIC_USE.md  __init__.py  aggregator.py  branch.py  continuation.py  gate.py  loop_sub_tapestry.py  map_.py  map_markers.py  reduce_.py  sink.py  source.py  sub_tapestry.py
pirn/streaming/: __init__.py  base.py  file_tail.py  iterable.py  kafka.py  trigger_adapter.py
pirn/triggers/: __init__.py  base.py  cron.py  http.py  kafka.py  valkey.py
pirn/viz/: __init__.py  _explore_cli.py  _scanner.py  _tapestry_graph.py  explorer.py  html.py  mermaid.py
pirn/yaml_loader/: __init__.py  knot_registry.py  knot_resolver.py  loader.py  spec.py
planning/: README.md  assembler-disassembler-plan.md  domain-gap-remediation-plan.md  mutation-testing-plan.md  pirn-phase3-followup-plan.md  real-backend-testing-plan.md  security-analysis.md  security-remediation-plan.md  standalone-functions-review.md
planning/archive/: README.md  domain-knot-libraries-ard.md  domain-knot-libraries-prd.md  execution-plan.md  knot-violations-audit-aggregate-2026-05-06.md  knot-violations-audit-connectors-2026-05-06.md  knot-violations-audit-health-2026-05-06.md  knot-violations-audit-oilgas-2026-05-06.md  knot-violations-audit-signal-2026-05-06.md  map-redesign-ard.md  migration-phase2-to-phase3.md  phase3-review-2026-05-01.md  phase4-data-formats-prd.md  phase4-progress.md  subtapestry-ard.md
planning/backlog/: PRD-connectors-infrastructure.md  PRD-domain-knot-specializations.md  PRD-mutation-testing.md  STORIES-domain-specializations.md  antspyx-reintegration.md  viz-knot-kind-design.md
planning/completed/: ADR-001-assembler-disassembler.md  ADR-002-subtapestry-contract.md  ADR-003-map-annotation-api.md  PRD-domain-knot-libraries.md  (+3 more)
scripts/: audit_knots.py  bootstrap_publish.sh  capture_screenshots.py  check_import_graph.py  check_install_isolation.py  check_no_caps_constants.py  check_no_import_forwarding.py  generate-sbom.sh  rebuild_examples_db.sh  stamp_agentic_use_version.py  stamp_workspace_version.py  test-env-down.sh  test-env-up.sh
tests/: conftest.py
(+2737 files in other folders)
