# Workspace root (split-core-and-domains, ADR-1 / PACKAGING_MIGRATION §2).
#
# This file is the uv WORKSPACE ROOT, not a published distribution: it has no
# `[project]` or `[build-system]` table and builds no wheel. The former monolith
# `pirn` project content moved into `packages/pirn-core/pyproject.toml` during
# the Phase 1 connectors fold; core source now lives at
# `packages/pirn-core/src/pirn/`. Members are wired below; install the whole
# workspace editable with `uv sync --all-packages` (+ `--all-extras` for deps).
#
# pytest config is centralized in the root `pytest.ini` (SCD-03 / §4).
# ruff config is centralized in the root `ruff.toml` (SCD-03 / §4).

[tool.uv.workspace]
members = ["packages/*"]

# Resolve intra-workspace deps to local source during dev/CI (never PyPI).
[tool.uv.sources]
pirn-core   = { workspace = true }
pirn-signal = { workspace = true }
pirn-data   = { workspace = true }
pirn-ml     = { workspace = true }
pirn-agents = { workspace = true }
pirn-health = { workspace = true }
pirn-oilgas = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "mutmut>=3.6.0,<4",
    "ruff>=0.15.17",
    "pyright>=1.1.410",
    "cyclonedx-bom>=7.3.0",
    "pre-commit>=4.6.0",
    "pytest-benchmark>=5.2.3",
    "pytest-timeout>=2.4.0",
]
# Convenience group that pulls every workspace member editable in one shot
# (ADR-1 / §2). Domain skeletons are still empty until Phase 3 (R5); `uv lock`
# resolves it on static metadata without building the empty skeletons.
all = [
    "pirn-core",
    "pirn-signal",
    "pirn-data",
    "pirn-ml",
    "pirn-agents",
    "pirn-health",
    "pirn-oilgas",
]

[tool.mutmut]
paths_to_mutate = "packages/pirn-core/src/pirn/"
tests_dir = "tests/"
runner = ".venv/bin/python -m pytest tests/ -x -q --no-header"

[tool.pyright]
# Shared relaxation rules live in the workspace-root `pyright.base.json`
# (SCD-03 / §4); this block scopes a root-level `pyright` run to the core tree.
# Each member package's pyproject extends the same base with its own `src/<pkg>`.
extends = "pyright.base.json"
include = ["packages/pirn-core/src/pirn"]
